Sorted out BG image and layout issues

--- a/HTML-CSS-Review/scss/_base.scss
+++ b/HTML-CSS-Review/scss/_base.scss
@@ -21,6 +21,14 @@ body {
     align-items: center;
 }
 
+.card {
+    border: 1px black solid;
+    text-align: center;
+    padding: 5px;
+    margin-left: 10vw;
+    margin-right: 10vw;
+}
+
 #slider-area {
     background-image: url(../assets/asset-3.jpeg);
     background-repeat: no-repeat;
@@ -46,6 +54,8 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    width: 100%;
+    height: auto;
 }
 
 footer > *{
