--- a/HTML-CSS-Review/scss/style.css
+++ b/HTML-CSS-Review/scss/style.css
@@ -33,6 +33,14 @@ body {
           align-items: center;
 }
 
+.card {
+  border: 1px black solid;
+  text-align: center;
+  padding: 5px;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
 #slider-area {
   background-image: url(../assets/asset-3.jpeg);
   background-repeat: no-repeat;
@@ -59,6 +67,8 @@ footer {
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  width: 100%;
+  height: auto;
 }
 
 footer > * {
