--- a/HTML_review/sass/_slider.scss
+++ b/HTML_review/sass/_slider.scss
@@ -2,14 +2,13 @@
 .slider-area {
     background-image: url(../Assets/asset-3.jpeg);
     background-repeat: no-repeat;
-    text-align: center;
+    background-position: center;
+    width: 100%;
+    height: 1020px;
+    background-size: cover;
 }
 
-// .slider-area {
-//     flex-direction: column;
-//     display: flex;
-// }
-
+// the text area rules
 .slid-text {
     display: block;
     grid-template-columns: 1;
